--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<DOCTYPE html>
+  <html>
+    <head>
+      <title>Én és a zene</title>
+    </head>
+    <body>
+      <h1 align="center">Én és a zene</h1>
+      
+      </html>
+    
